--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-# Rename this file to .env and fill in your actual keys
 OPENAI_API_KEY=your_openai_api_key_here
-GOOGLE_API_KEY=your_google_api_key_here
+GOOGLE_API_KEY=your_google_api_key_here # Optional
+
+# Choose your vector database type: 'memory' or 'chroma'
+VECTOR_DB_TYPE=memory
 
 # Example for ChromaDB
 VECTOR_DB_URL=http://localhost:8000
@@ -9,5 +11,7 @@ VECTOR_DB_COLLECTION_NAME=frieren_chunks
 # Add other configuration variables as needed
 CHUNK_SIZE=1000
 CHUNK_OVERLAP=200
-RETRIEVAL_TOP_K=5
+RETRIEVAL_TOP_K=7 # Recommended: 7
 LLM_MODEL_NAME=gpt-4o-mini # Or gemini-1.5-flash-latest
+EMBEDDING_MODEL_NAME=text-embedding-3-large # Or embedding-001
+FRIEREN_DATA_DIR="./src/data/raw/"
