--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "start:api": "node dist/index.js",
+    "start:cli": "node dist/index.js cli",
     "dev": "ts-node src/index.ts",
-    "setup-db": "ts-node src/index.ts setup"
+    "dev:api": "ts-node src/index.ts",
+    "dev:cli": "ts-node src/index.ts cli",
+    "setup-db": "ts-node src/index.ts setup-db"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +23,10 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.x.x",
+    "@types/express": "^5.0.1",
     "chromadb": "^2.3.0",
     "dotenv": "^16.x.x",
+    "express": "^5.1.0",
     "langchain": "^0.x.x",
     "openai": "^4.x.x"
   }
