--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "ts-node src/index.ts",
     "dev:api": "ts-node src/index.ts",
     "dev:cli": "ts-node src/index.ts cli",
-    "setup-db": "ts-node src/index.ts setup-db"
+    "setup-db": "ts-node src/index.ts setup-db",
+    "inspect-db": "ts-node src/db-inspect.ts"
   },
   "keywords": [],
   "author": "",
